ALL THE RECIPES ARE NOW THERE WITH CONNECTION TO THE HOMEPAGE

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
     <ol>
 
-    <li><a href=recipes/pizza.html> Pizza Recipe </a></li>
+    <li><a href=recipes/pizza.html> YOUR PIZZA </a></li>
         
     <li><a href=recipes/fried_chicken.html> YOUR CHICKEN </a></li>
+
+    <li><a href=recipes/hot_dog.html> YOUR HOT DOG </a></li>    
 
     </ol>
 
